--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     <footer>
       <p>
         Check out my GitHub:
-        <a href="https://github.com/tarek0m" target="_blank">tarek0m</a>
+        <a href="https://github.com/tarek0m" target="_blank" rel="noopener"
+          >tarek0m</a
+        >
       </p>
     </footer>
     <script src="script.js"></script>
