--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
       <h1>Tic Tac Toe</h1>
     </header>
     <div class="container">
-      <p>Open the console to play the game.</p>
-      <p>
-        Instructions: Write <code>game.playRound(n)</code> where
-        <code>n</code> is the number of the cell as visualized in the console.
-      </p>
+      <div class="playground">
+        <div class="row">
+          <div class="cell" data-cell></div>
+          <div class="cell" data-cell></div>
+          <div class="cell" data-cell></div>
+        </div>
+        <div class="row">
+          <div class="cell" data-cell></div>
+          <div class="cell" data-cell></div>
+          <div class="cell" data-cell></div>
+        </div>
+        <div class="row">
+          <div class="cell" data-cell></div>
+          <div class="cell" data-cell></div>
+          <div class="cell" data-cell></div>
+        </div>
+      </div>
     </div>
     <footer>
       <p>
