GUI version first release

--- a/index.html
+++ b/index.html
@@ -6,28 +6,15 @@
     <link rel="stylesheet" href="style.css" />
     <title>Tic Tac Toe</title>
   </head>
+
   <body>
     <header>
       <h1>Tic Tac Toe</h1>
     </header>
     <div class="container">
-      <div class="playground">
-        <div class="row">
-          <div class="cell" data-cell></div>
-          <div class="cell" data-cell></div>
-          <div class="cell" data-cell></div>
-        </div>
-        <div class="row">
-          <div class="cell" data-cell></div>
-          <div class="cell" data-cell></div>
-          <div class="cell" data-cell></div>
-        </div>
-        <div class="row">
-          <div class="cell" data-cell></div>
-          <div class="cell" data-cell></div>
-          <div class="cell" data-cell></div>
-        </div>
-      </div>
+      <dialog id="startDialog"></dialog>
+      <div class="turn"></div>
+      <div class="playground"></div>
     </div>
     <footer>
       <p>
